--- a/Frontend/src/app/core/components/layouts/landing/landing.component.html
+++ b/Frontend/src/app/core/components/layouts/landing/landing.component.html
@@ -6,8 +6,7 @@
           Manage Your Assets and Complete Your Work Quickly
         </p>
         <div class="buttons">
-          <a [routerLink]="['/users/register']" routerLinkActive="router-link-active"   class="btn btn-primary">Sign Up</a>
-          <a [routerLink]="['/users/login']" routerLinkActive="router-link-active"   class="btn btn-primary">Login</a>
+          <a [routerLink]="['/dashboard']" routerLinkActive="router-link-active"   class="btn btn-primary">Go To Dashboard</a>
         </div>
       </div>
     </div>
