--- a/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
+++ b/Frontend/src/app/dashboard/components/admin-dashboard/admin-dashboard.component.html
@@ -33,7 +33,9 @@
       </tr>
     </table>
     
-
+    <div *ngIf="errorMessage" class="alert alert-danger text-center">
+      {{errorMessage}}
+    </div>
   
   
   
