--- a/Frontend/src/app/core/components/layouts/footer/footer.component.html
+++ b/Frontend/src/app/core/components/layouts/footer/footer.component.html
@@ -1,9 +1,7 @@
-<div class="foot text-white" style="background-color: rgb(116, 114, 114)">
+<div class="footer text-white bg-dark">
   <br />
-  <h3 style="text-align: center">
-    ABOUT <span><hr /></span>
-  </h3>
-  <p>
+  <div class="leftbox"><h2>About</h2></div>
+  <div class="middlebox">
     With more than {{years}} years of experience in handling multiple technology
     projects across industries, Nitor Infotech has gained strong expertise in
     areas of technology consulting, solutioning, and product engineering. With a
@@ -11,10 +9,8 @@
     modern-day products and top-notch services through our tech-driven approach.
     Digitization being our key strategy, we digitally assess their operational
     capabilities in order to achieve our customer's end- goals.
-  </p>
-  <hr />
-  <p style="text-align: center">
+  </div>
+  <div class="rightbox">
     Assest Mangement &#169; {{ today | date : "yyyy" }}
-  </p>
-  <br />
+  </div>
 </div>
