--- a/GridView/src/app/app.component.html
+++ b/GridView/src/app/app.component.html
@@ -2,7 +2,7 @@
   <p>{{item.name}}</p>
 </div> -->
 <div style="text-align: center;">
-  <button [routerLink]="['/assets/vendors']" routerLinkActive="router-link-active">Show Vendors</button>
+  <button [routerLink]="['/assets/assets']" routerLinkActive="router-link-active">Show Assets</button>
 </div>
 <router-outlet></router-outlet>
 <div style="text-align: center;"><h2>User Table</h2></div>
