--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,4 +1,6 @@
-
+<!-- <app-sidebar [isExpanded]="sidebarExpanded" (toggleSidebar)="sidebarExpanded = !sidebarExpanded"></app-sidebar> -->
+<!-- 
+<div class="content" [ngClass]="{'sidebarExpanded' : sidebarExpanded}"> -->
 <app-header></app-header>
 <router-outlet></router-outlet>
 <br/>
