--- a/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
+++ b/Frontend/src/app/dashboard/components/Forms/add-vendor/add-vendor.component.html
@@ -1,26 +1,35 @@
 <section class="container">
-  <div class="card form-format">
-    <h1>Add Vendor</h1>
-    <form (ngSubmit)="submitVendorDetails()">
-      <div class="mb-3">
+  <div class="card ">
+    <h1 class="centre-text">Add Vendor</h1>
+    <form #vendorForm="ngForm" (ngSubmit)="submitVendorDetails()">
+      <div class="mb-3 leftBox">
         <label for="name" class="form-label">Name</label>
         <input
           type="text"
           class="form-control"
           name="name"
           required
+          #name = "ngModel"
+          minlength="2"
+          placeholder="Enter Name"
           [(ngModel)]="vendor.name"
         />
+        <span *ngIf="name.invalid && name.touched" class="errorMessage">Enter Valid Name</span>
       </div>
-      <div class="mb-3">
+      
+      <div class="mb-3 rightBox">
         <label for="contact" class="form-label">Contact No</label>
         <input
           type="text"
           class="form-control"
           name="contact"
           required
+          pattern="^((\\+91-?)|0)?[0-9]{10}$"
+          #contact="ngModel"
+          placeholder="Enter Contact Number"
           [(ngModel)]="vendor.contactNo"
         />
+        <span *ngIf="contact.invalid && contact.touched" class="errorMessage">Enter Valid Contact Number</span>
       </div>
       <div class="mb-2">
         <label for="address" class="form-label">Address</label>
@@ -28,42 +37,61 @@
           type="textarea"
           class="form-control"
           name="address"
+          required
+          minlength="4"
+          #address="ngModel"
+          placeholder="Enter Address"
           [(ngModel)]="vendor.address"
         ></textarea>
+        <span *ngIf="address.invalid && address.touched" class="errorMessage">Enter Valid Address</span>
+
       </div>
-      <div class="mb-3">
+      <div class="mb-3 leftBox">
         <label for="registration">Registration Date</label>
         <input
-          type="date"
           class="form-control"
           name="registration"
-          required
+          disabled="disabled"
           [(ngModel)]="vendor.registrationDate"
         />
       </div>
-      <div class="mb-3">
+      <div class="mb-3 rightBox">
         <label for="termination">Termination Date</label>
         <input
           type="date"
           class="form-control"
           name="termination"
+          required
+          min="{{vendor.registrationDate}}"
+          placeholder="Select termination date"
+          #termination="ngModel"
           [(ngModel)]="vendor.terminationDate"
         />
+        <span *ngIf="termination.invalid && termination.touched" class="errorMessage">Select Valid Date</span>
+
       </div>
       <div class="centre-text mb-3">
         <input
           type="submit"
           class="btn btn-primary"
           value="Submit"
+          [disabled]="vendorForm.invalid"
         />
       </div>
+      <!-- {{vendorForm.invalid}} -->
     </form>
     <div class="centre-text">
       <button
-        [routerLink]="['/dashboard']"
+        [routerLink]="['/dashboard/ShowVenders']"
         routerLinkActive="router-link-active"
         class="btn btn-warning"
-        >Back</button
+        >Back to Vendors</button
+      >
+      <button
+        [routerLink]="['/dashboard']"
+        routerLinkActive="router-link-active"
+        class="btn btn-secondary"
+        >Back to Dashboard</button
       >
     </div>
   </div>
